# emiler

./: .gitignore  emiler_readme.md  final_emailer.ipynb  pre_mailer.ipynb  pyproject.toml  readme.md  sample_emails.csv
email_engine/: __init__.py  app.py  csv_loader.py  email_generator.py  pyproject.toml  sample_emails2.csv  schema.py  sendgrid_sender.py  template_engine.py
nextjs-web/: README.md  index.html  package-lock.json  package.json
nextjs-web/src/: App.tsx  index.css
nextjs-web/src/app/: layout.jsx  page.jsx
nextjs-web/src/components/: AnimatedBackground.jsx  AnimatedBackground.tsx  ApprovalSection.jsx  ApprovalSection.tsx  ChatbotSection.jsx  EmailEditor.jsx  EmailEditor.tsx  EmailManager.jsx  EmailManager.tsx  LandingPage.jsx  LandingPage.tsx  PreviewSection.jsx  PreviewSection.tsx  UploadSection.jsx  UploadSection.tsx
nextjs-web/src/components/save/: ChatbotSection.jsx  EmailEditor.jsx  EmailManager.jsx
