[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "ipynb>=0.5.1",
    "jupyter>=1.1.1",
    "kernel>=0.19.0",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.2",
    "openai>=2.7.2",
    "openai-agents>=0.5.0",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "pydantic[email]>=2.12.4",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "sendgrid>=6.12.5",
]
